--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
+    androidTestImplementation "io.mockk:mockk-android:1.10.0"
+    testImplementation "io.mockk:mockk:1.10.0"
+    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-native:1.0.15'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
